# CrossPlatform

./: .gitignore  README.md  appveyor.yml
.github/workflows/: cmake-multi-platform.yml
Docker/Linux/: Dockerfile  build.bat  run.bat
RTPApp/: CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake
RTPApp/Client/: CMakeLists.txt  ClientApp.cpp
RTPApp/Common/: BlockingQueue.cpp  CMakeLists.txt  DateTimeProvider.h  InputParser.cpp  ThreadManager.cpp  ThreadManager.h
RTPApp/Common/Logger/: Logger.h
RTPApp/Common2/: InputParser.cpp
RTPApp/CommonTest/: BlockingQueueTest.cpp  CMakeLists.txt  DateTimeProviderTest.cpp  ThreadManagerTest.cpp  TrackNew.h
RTPApp/Network/: CMakeLists.txt  NetworkHeader.h  TCPClient.cpp  TCPClient.h  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h
RTPApp/NetworkTest/: CMakeLists.txt  UDPServerTest.cpp
RTPApp/RTPApp/: CMakeLists.txt  RTPApp.cpp
RTPApp/Server/: CMakeLists.txt  RTPServer.cpp  RTPServer.h
RTPApp/cmake/: LibFuzzer.cmake  PreventInSourceBuilds.cmake  StaticAnalyzers.cmake
RTPApp/common/: BlockingQueue.h  CMakeLists.txt  InputParser.cpp  InputParser.h  ThreadManager.h
RTPApp/common/Logger/: Logger.cpp  Logger.h
Tool/StatGenerator/: CollectData.py
